--- a/playbooks/check-lv.yml
+++ b/playbooks/check-lv.yml
@@ -2,24 +2,29 @@
 - name:
   hosts: all
   tasks:
-    - name: get lvm info
+    - name: get VG info
       debug:
         #msg: "{{ ansible_facts['lvm']['vgs']['vg2'] }}"
         msg: "{{ ansible_facts['lvm']['vgs']['vg2']['free_g'] }}"
-      when: ( 'vg2' in ansible_facts['lvm']['vgs'] ) and  ( ansible_facts['lvm']['vgs']['vg2']['free_g'] >= '0.14' )
-      ignore_errors: yes
+      when: ( 'vg2' in ansible_facts['lvm']['vgs'] ) and  ( ansible_facts['lvm']['vgs']['vg2']['free_g'] >= '1.0' )
 
+    - name: Create LV with 1.5G size
+      lvol:
+        lv: data
+        vg: vg2
+        size: 1500M
+      when: ( 'vg2' in ansible_facts['lvm']['vgs'] ) and ( ansible_facts['lvm']['vgs']['vg2']['free_g'] >= '1.5' )
+
+    - name: Create LV with 1.0G size
+      lvol:
+        lv: data
+        vg: vg2
+        size: 1000M
+      when: ( 'vg2' in ansible_facts['lvm']['vgs'] ) and ( ansible_facts['lvm']['vgs']['vg2']['free_g'] < '1.5' )
+        
     - name: Prints message if doesnt find it
       debug:
         msg: vg2 doesnt exist
       when: "'vg2' not in ansible_facts['lvm']['vgs']"
 
-#    - name: Check vg size
-#      debug:
-#        msg: vg is 150M or larger
-#      when: "ansible_facts['lvm']['vgs']['vg2']['free_g'] >= '0.14'"
-#    
-#    - name: Check vg size
-#      debug:
-#        msg: vg is smaller than 150M
-#      when: "ansible_facts['lvm']['vgs']['vg2']['free_g'] < '0.14'"
+    
