--- a/playbooks/check-lv.yml
+++ b/playbooks/check-lv.yml
@@ -13,6 +13,7 @@
         lv: data
         vg: vg2
         size: 1500M
+        shrink: no
       when: ( 'vg2' in ansible_facts['lvm']['vgs'] ) and ( ansible_facts['lvm']['vgs']['vg2']['free_g'] >= '1.5' )
 
     - name: Create LV with 1.0G size
@@ -20,6 +21,7 @@
         lv: data
         vg: vg2
         size: 1000M
+        shrink: no
       when: ( 'vg2' in ansible_facts['lvm']['vgs'] ) and ( ansible_facts['lvm']['vgs']['vg2']['free_g'] < '1.5' )
         
     - name: Prints message if doesnt find it
@@ -27,4 +29,22 @@
         msg: vg2 doesnt exist
       when: "'vg2' not in ansible_facts['lvm']['vgs']"
 
-    
+    - name: Create Filesystem
+      filesystem:
+        device: /dev/vg2/data
+        fstype: xfs
+      when: ( 'vg2' in ansible_facts['lvm']['vgs'] )
+      #when: ansible_facts['lvm']['lvs']['data']
+
+    - name: Create /data dir
+      file:
+        path: /data
+        state: directory
+
+    - name: Mount Filesystem
+      mount:
+        path: /data
+        src: /dev/vg2/data
+        fstype: xfs
+        state: mounted
+      when: ( 'vg2' in ansible_facts['lvm']['vgs'] )
