--- a/playbooks/lv.yml
+++ b/playbooks/lv.yml
@@ -1,17 +1,50 @@
 ---
-- name: create logical vol
+- name:
   hosts: all
   tasks:
-    - name: create lv in block
-      block:
-        - name: Create lv - space available
-          lvol:
-            lv: data
-            vg: vg2
-            size: 150M
-      
-        - name: Create lv  - no space available
-          lvol:
-            lv: data
-            vg: vg2
-            size: 120M
+    - name: get VG info
+      debug:
+        #msg: "{{ ansible_facts['lvm']['vgs']['vg2'] }}"
+        msg: "{{ ansible_facts['lvm']['vgs']['vg2']['free_g'] }}"
+      when: ( 'vg2' in ansible_facts['lvm']['vgs'] ) and  ( ansible_facts['lvm']['vgs']['vg2']['free_g'] >= '1.0' )
+
+    - name: Create LV with 1.5G size
+      lvol:
+        lv: data
+        vg: vg2
+        size: 1500M
+        shrink: no
+      when: ( 'vg2' in ansible_facts['lvm']['vgs'] ) and ( ansible_facts['lvm']['vgs']['vg2']['free_g'] >= '1.5' )
+
+    - name: Create LV with 1.0G size
+      lvol:
+        lv: data
+        vg: vg2
+        size: 1000M
+        shrink: no
+      when: ( 'vg2' in ansible_facts['lvm']['vgs'] ) and ( ansible_facts['lvm']['vgs']['vg2']['free_g'] < '1.5' )
+        
+    - name: Prints message if doesnt find it
+      debug:
+        msg: vg2 doesnt exist
+      when: "'vg2' not in ansible_facts['lvm']['vgs']"
+
+    - name: Create Filesystem
+      filesystem:
+        device: /dev/vg2/data
+        fstype: xfs
+      when: ( 'vg2' in ansible_facts['lvm']['vgs'] )
+      #when: ansible_facts['lvm']['lvs']['data']
+
+    - name: Create /data dir
+      file:
+        path: /data
+        state: directory
+
+    - name: Mount Filesystem
+      mount:
+        path: /data
+        src: /dev/vg2/data
+        fstype: xfs
+        state: mounted
+      when: ( 'vg2' in ansible_facts['lvm']['vgs'] )
