Adding user creation playbooks and supporting files

--- a/playbooks/hosts.yml
+++ b/playbooks/hosts.yml
@@ -7,6 +7,6 @@
         var: ansible_enp0s8.ipv4.address
     - name: create hosts
       template:
-        src: hosts.j2
+        src: ../templates/hosts.j2
         dest: /etc/myhosts3
       when: inventory_hostname in groups['prod']
