--- a/playbooks/lv.yml
+++ b/playbooks/lv.yml
@@ -13,14 +13,13 @@
         lv: data
         vg: vg2
         size: 1500M
-        shrink: no
       when: ( 'vg2' in ansible_facts['lvm']['vgs'] ) and ( ansible_facts['lvm']['vgs']['vg2']['free_g'] >= '1.5' )
 
     - name: Create LV with 1.0G size
       lvol:
         lv: data
         vg: vg2
-        size: 1000M
+        size: 800M
         shrink: no
       when: ( 'vg2' in ansible_facts['lvm']['vgs'] ) and ( ansible_facts['lvm']['vgs']['vg2']['free_g'] < '1.5' )
         
@@ -33,8 +32,7 @@
       filesystem:
         device: /dev/vg2/data
         fstype: xfs
-      when: ( 'vg2' in ansible_facts['lvm']['vgs'] )
-      #when: ansible_facts['lvm']['lvs']['data']
+      when: "'vg2' in ansible_facts['lvm']['vgs']"
 
     - name: Create /data dir
       file:
@@ -47,4 +45,4 @@
         src: /dev/vg2/data
         fstype: xfs
         state: mounted
-      when: ( 'vg2' in ansible_facts['lvm']['vgs'] )
+      when: "'vg2' in ansible_facts['lvm']['vgs']"
