--- a/playbooks/hosts.yml
+++ b/playbooks/hosts.yml
@@ -8,5 +8,5 @@
     - name: create hosts
       template:
         src: ../templates/hosts.j2
-        dest: /etc/myhosts3
+        dest: /etc/myhosts
       when: inventory_hostname in groups['prod']
