--- a/playbooks/webdev.yml
+++ b/playbooks/webdev.yml
@@ -46,7 +46,7 @@
         state: link
         force: yes
 
-    - name: Deply Index file
+    - name: Deploy Index file
       template:
         src: ../templates/http.j2
         dest: /webdev/index.html
