--- a/playbooks/rhn.yml
+++ b/playbooks/rhn.yml
@@ -4,7 +4,7 @@
   tasks:
     - name: Register
       redhat_subscription:
-        username: cabbirolo
-        password: SecreTouch2112!
+        username:
+        password: 
         auto_attach: yes
         state: present
